[package]
name = "breach_parser_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.1"
flate2 = "1.0"
rayon = "1.5"
walkdir = "2.3"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.5"
aho-corasick = "0.7"
memmap2 = "0.9.4"
bstr = "1.9.1"
zstd = "0.13"
num_cpus = "1.13"