[package]
name = "breach_parser_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "breach-parse"
path = "src/main.rs"

## removed unused binary target "triagram" for faster builds

[dependencies]
clap = "3.1"
flate2 = "1.0"
rayon = "1.5"
walkdir = "2.3"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aho-corasick = "0.7"
memmap2 = "0.9.4"
bstr = "1.9.1"
zstd = "0.13"
num_cpus = "1.13"
tantivy = "0.24.2"
crossbeam-channel = "0.5"
memchr = "2"

[profile.release]
# Optimize for maximum runtime performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
